2009-01-22  Stephane Delcroix  <sdelcroix@novell.com>

	* Makefile.am: removing references that slipped in by mistake.

2009-01-21  Jesse Jones  <jesjones@mindspring.com>

	* WriteStaticFieldFromInstanceMethodRule.cs: Ignore fields
	decorated with [ThreadStatic].

2008-12-21  Sebastien Pouliot  <sebastien@ximian.com>

	* ProtectCallToEventDelegatesRule.cs: Deal with (null != variable)
	just like we did with (variable != null).

2008-11-30  Sebastien Pouliot  <sebastien@ximian.com>

	* NonConstantStaticFieldsShouldNotBeVisibleRule.cs: Use HasFields

2008-11-09  Sebastien Pouliot  <sebastien@ximian.com>

	* ProtectCallToEventDelegatesRule.cs: Change documentation comments
	to make it clear that this does not solve all potential problems
	wrt executing events while they are (possibly) being removed.

2008-11-08  Sebastien Pouliot  <sebastien@ximian.com>

	* ProtectCallToEventDelegatesRule.cs: New. Rule that checks if calls
	to event delegates are null-protected and without a race condition.
	* Makefile.am: Added the new rule and tests to the build.

2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* Gendarme.Rules.Concurrency.mdp:
	* Gendarme.Rules.Concurrency.csproj: Activate makefile integration for
	all the rules projects. Remove the old mdp files as they are no
	longer needed.

2008-10-23  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotUseMethodImplOptionsSynchronizedRule.cs: New. Rule to warn 
	about method decorated with [MethodImpl(MethodImplOptions.Synchronized)]
	since the runtime lock is similar to a lock(this) or lock(typeof(X))
	* Gendarme.Rules.Concurrency.mdp: Updated MD project file.
	* Makefile.am: Added the new rule to the build.

2008-10-21  Néstor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Removed common stuff in order to reduce duplication with
	other Makefiles.

2008-10-21  Cedric Vivier  <cedricv@neonux.com>

	* ReviewLockUsedOnlyForOperationsOnVariables.cs: New.