@@ -4,6 +4,7 @@ rules_sources =  \
 	DoNotLockOnThisOrTypesRule.cs \
 	DoNotLockOnWeakIdentityObjectsRule.cs \
 	DoNotUseMethodImplOptionsSynchronizedRule.cs \
+	DoNotUseThreadStaticWithInstanceFieldsRule.cs \
 	DontUseLockedRegionOutsideMethodRule.cs \
 	DoubleCheckLockingRule.cs \
 	LockAnalyzerRule.cs \
@@ -16,10 +17,10 @@ tests_sources = \
 	DoNotLockOnThisOrTypesTest.cs \
 	DoNotLockOnWeakIdentityObjectsTest.cs \
 	DoNotUseMethodImplOptionsSynchronizedTest.cs \
+	DoNotUseThreadStaticWithInstanceFieldsTest.cs \
 	DontUseLockedRegionOutsideMethodTest.cs \
 	DoubleCheckLockingTest.cs \
 	NonConstantStaticFieldsShouldNotBeVisibleTest.cs \
 	ProtectCallToEventDelegatesTest.cs \
 	ReviewLockUsedOnlyForOperationsOnVariablesTest.cs \
 	WriteStaticFieldFromInstanceMethodTest.cs
-
