@@ -1,3 +1,8 @@
+2009-01-23  Jesse Jones  <jesjones@mindspring.com>
+
+	* DoNotUseThreadStaticWithInstanceFieldsRule.cs, Makefile.am: 
+	added new rule.
+
 2009-01-22  Stephane Delcroix  <sdelcroix@novell.com>
 
 	* Makefile.am: removing references that slipped in by mistake.
